--- a/_tp/_tp1/tp1_bouchez.qmd
+++ b/_tp/_tp1/tp1_bouchez.qmd
@@ -6,38 +6,40 @@ editor: visual
 date: 2024-01-22
 ---
 
-## Explications des commandes : 
+## Explications des commandes :
 
-##### Cette commande change le repertoire courant dans le terminal pour se rendre au sous dossier fas_1001  
+##### Cette commande change le repertoire courant dans le terminal pour se rendre au sous dossier fas_1001
 
 ![](images/cd_chemin.png)
 
 ![]()
 
-##### La commande git checkout sert a passer d'une branche a une autre. Ici, nous selectionnons notre branche.  
+##### La commande git checkout sert a passer d'une branche a une autre. Ici, nous selectionnons notre branche.
 
-![](images/git checkout .png)
+![](images/git%20checkout%20.png)
 
-##### La commande git branch sert a apporter des modifications a notre branche sans modifier la  branche original
+##### La commande git branch sert a apporter des modifications a notre branche sans modifier la branche original
 
-![](images/git branch .png)
+![](images/git%20branch%20.png)
 
-##### La  commande git add permet d'ajouter des modifications dans le repertoire de travail 
+##### La commande git add permet d'ajouter des modifications dans le repertoire de travail
 
-##### ![](images/git add .png){width="508"}
+##### ![](images/git%20add%20.png){width="508"}
 
 ##### La commande git commit permet de sauvegarder le code et d'inscrire un message pour identifier la modification
 
-![](images/premier commit .png)
+![](images/premier%20commit%20.png)
 
-##### La commande git add ici ette commande ajoute le fichier **`travail_de_session.qmd`** du dossier **`_travail_session`** à la zone de staging. 
+##### La commande git add ici ajoute le fichier **`travail_de_session.qmd`** du dossier **`_travail_session`** à la zone de staging.
 
-![](images/git add travail session .png)
+![](images/git%20add%20travail%20session%20.png)
 
-##### La commande git commit - m permet de sauvegarder ce code et ajouter un message a la modification 
+##### La commande git commit - m permet de sauvegarder ce code et ajouter un message a la modification
 
-![](images/Capture d’écran, le 2024-01-21 à 16.06.51.png)
+![](images/Capture%20d’écran,%20le%202024-01-21%20à%2016.06.51.png)
 
-##### Ces commandes ont servi a deposer les fichiers dans git hub 
+##### Les commandes remote et push ont servi a déposer les fichiers dans git hub avec toutes leurs modifications
 
-##### ![](images/git remote .png)
+##### ![](images/git%20remote%20.png)
+
+![]()
